(library
  (public_name dynt)
  (synopsis "Dynt: DYNamic Types")
  (inline_tests)
  (libraries landmarks)
  (preprocess (pps ppx_expect dynt.deriving landmarks.ppx)))

(rule
  (targets variant_lexer.ml)
  (deps    variant_lexer.mll)
  (action
    (chdir %{workspace_root}
           (run %{bin:ocamllex} -ml -q -o %{targets} %{deps}))))
