(library
 (name dynt_ppx)
 (public_name dynt.ppx)
 (synopsis "[@@deriving t] & [%path? .] syntax extensions")
 (libraries ppxlib)
 (preprocess (pps ppxlib.metaquot))
 (modules dynt_deriving dynt_path)
 (kind ppx_deriver))

(executable
 (name standalone)
 (libraries dynt_ppx ppxlib)
 (modules standalone))
