(library
  (name lrt_deriving)
  (public_name lrt.deriving)
  (synopsis "lrt [@@deriving t] syntax extension")
  (libraries ppxlib)
  (preprocess (pps ppxlib.metaquot))
  (modules lrt_deriving)
  (kind ppx_rewriter))

(library
  (name lrt_path)
  (public_name lrt.path)
  (synopsis "lrt [%path? .] syntax extension")
  (libraries ppxlib)
  (preprocess (pps ppxlib.metaquot))
  (modules lrt_path)
  (kind ppx_rewriter))

(executable
  (name standalone)
  (libraries lrt_path lrt_deriving ppxlib)
  (modules standalone))
