(library
 (name ppx_test)
 (libraries dynt inspect)
 (inline_tests)
 (modules path ppx)
 (preprocess (pps ppx_expect ppx_inline_test dynt.deriving)))

(test
  (name fuzzing)
  (libraries dynt)
  (modules fuzzing)
  (preprocess (pps ppx_expect ppx_inline_test dynt.deriving)))

(executable
  (name segfault)
  (libraries dynt)
  (modules segfault)
  (preprocess (pps ppx_expect ppx_inline_test dynt.deriving)))
